<resources>
    <string name="app_name">TravelMe</string>
    <string name="AddTrvlBtn">הוסף בקשה</string>
    <string name="your_name">Your name</string>
    <string name="yourPhoneNumber">Your phone number </string>
    <string name="your_email">Your Email</string>
    <string name="your_address">Your address</string>
    <string name="bSourceAddress">source address</string>
    <string name="bDestinationAddress">Destination address</string>
    <string name="pick_date">Pick Date</string>
    <string name="tvAddress">Address</string>
    <string name="tvStreet">Street</string>
    <string name="tvHouseNumber">House number</string>
    <string name="bSave">Save</string>
    <string name="order_status">Order Status</string>
    <string name="service_provider">Service Provider</string>
    <string name="company">Company</string>
    <string name="date">Date</string>
    <string name="confirm_button">Confirm</string>
</resources>