<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Ui.AddTravelActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
     android:hint="@string/your_name"
   >
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/name"
        android:hint="@string/yourPhoneNumber"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneNumber"
        android:ems="10"
        android:hint="@string/your_email"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bSourceAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_alignStart="@id/bDestinationAddress"
        android:layout_alignEnd="@id/bDestinationAddress"
        android:layout_marginTop="10dp"
        android:text="@string/bSourceAddress" />

    <Button
        android:id="@+id/bDestinationAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bSourceAddress"
        android:text="@string/bDestinationAddress" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/email"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/addPassengers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bDestinationAddress"
        android:orientation="horizontal">

        <Button
            android:id="@+id/minusP"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:onClick="removePassenger"
            app:icon="@drawable/baseline_remove_black_18dp" />

        <EditText
            android:id="@+id/passengers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="number of passengers"
            android:inputType="number" />

        <Button
            android:id="@+id/plusP"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:onClick="addPassenger"
            android:longClickable="true"


            app:icon="@drawable/baseline_add_24" />
    </LinearLayout>

    <include
        android:id="@+id/departureDate"
        layout="@layout/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addPassengers" />

    <include
        android:id="@+id/returnDate"
        layout="@layout/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/departureDate" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/returnDate"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/order_status"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:enabled="false"
            android:text="Sent"
            android:inputType="textEmailAddress"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCompanyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/etStatus"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/service_provider"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:enabled="false"
            android:text="NO"
            android:inputType="textEmailAddress"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/bSave"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="650dp"
        android:text="@string/bSave"
        app:icon="@drawable/baseline_save_alt_black_18dp" />

</RelativeLayout>